--- a/index.html
+++ b/index.html
@@ -63,32 +63,30 @@
     <span class="menu-label">Memory Game</span>
   </a>
 </li>
+<!-- Hangman Game menu item -->
+<li class="menu-item">
+  <a href="#" class="menu-link" onclick="showHangman()">
+    <span class="material-symbols-rounded">sports_esports</span>
+    <span class="menu-label">Hangman Game</span>
+  </a>
+</li>
 
+<!-- Image Editor menu item -->
+<li class="menu-item">
+  <a href="#" class="menu-link" onclick="showImageEditor()">
+    <span class="material-symbols-rounded">photo</span>
+    <span class="menu-label">Image Editor</span>
+  </a>
+</li>
+
+<!-- Playable Piano menu item -->
+<li class="menu-item">
+  <a href="#" class="menu-link" onclick="showPiano()">
+    <span class="material-symbols-rounded">music_note</span>
+    <span class="menu-label">Playable Piano</span>
+  </a>
+</li>
             <!-- Other existing menu items -->
-            <li class="menu-item">
-              <a href="#" class="menu-link">
-                <span class="material-symbols-rounded">insert_chart</span>
-                <span class="menu-label">Analytics</span>
-              </a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link">
-                <span class="material-symbols-rounded">notifications</span>
-                <span class="menu-label">Notifications</span>
-              </a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link">
-                <span class="material-symbols-rounded">star</span>
-                <span class="menu-label">Favourites</span>
-              </a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link">
-                <span class="material-symbols-rounded">storefront</span>
-                <span class="menu-label">Products</span>
-              </a>
-            </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <span class="material-symbols-rounded">group</span>
@@ -149,6 +147,17 @@
   function showMemoryGame() {
     showIframe('memory-game/index.html'); // đường dẫn tới game trí nhớ
   }
+  function showHangman() {
+  showIframe('hangman-game/index.html');
+}
+
+function showImageEditor() {
+  showIframe('image-editor/index.html');
+}
+
+function showPiano() {
+  showIframe('piano/index.html');
+}
 
   function showIframe(src) {
     const iframe = document.getElementById('content-frame');
